Making page a config parameter.